# hack-and-slash-rpg

./: .gitmodules  CMakeLists.txt  README.md
assets/: settings.xml
assets/textures/: texturelist.xml
include/: hns.h
include/core/: dimensions.h  entity.h  gamestage.h  gamestate.h  jobsystem.h  position.h  render.h  scenery.h
include/state/: game.h
include/utilities/: playercamera.h  resourcemanager.h
src/: hns.c  main.c
src/core/: gamestage.c  gamestate.c  jobsystem.c
src/state/: game.c
src/utilities/: icon.rc  playercamera.c  resourcemanager.c
